Fix missing spacing between form submit button and info box 🐿 v2.12.5

--- a/client/stylesheets/overwrites.scss
+++ b/client/stylesheets/overwrites.scss
@@ -1,3 +1,11 @@
+.ncf {
+	margin: oSpacingByName('s4') 0;
+}
+
 .consent-form--inline-controls > .consent-form__inline-container {
 	display: grid !important;
+}
+
+.consent-form {
+	margin-bottom: oSpacingByName('s4');
 }
